tests/snapshots/generated_benchmarks@small-5.snap
---
source: tests/mod.rs
expression: location
snapshot_kind: text
---
ResolvedLocation {
    function: "small::TestStruct0::method_0",
    file: "/Users/sam/work/rust_debuginfo/benches/test_binaries/small.rs",
    line: 17,
}
