tests/snapshots/load_file@aarch64-unknown-linux-gnu.snap
---
source: tests/mod.rs
expression: parsed
snapshot_kind: text
---
DebugInfo {
    debug_files: [
        DebugFile {
            [salsa id]: Id(800),
            file: File {
                [salsa id]: Id(0),
                path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                member_file: None,
                mtime: SystemTime {
                    tv_sec: 1748701990,
                    tv_nsec: 341906278,
                },
                size: 3829072,
            },
            relocatable: false,
        },
    ],
    index: Index {
        [salsa id]: Id(2400),
        data: IndexData {
            name_to_file: {
                NameId {
                    path: [
                        "panic_abort",
                        "__rust_start_panic",
                    ],
                    name: "abort",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "simple_test",
                    ],
                    name: "function_call",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "simple_test",
                    ],
                    name: "main",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "std",
                        "process",
                        "{impl#59}",
                    ],
                    name: "report",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "core",
                        "alloc",
                        "layout",
                        "{impl#0}",
                        "from_size_align_unchecked",
                    ],
                    name: "precondition_check",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "std",
                        "rt",
                        "lang_start",
                    ],
                    name: "{closure#0}<()>",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "panic_abort",
                    ],
                    name: "__rust_panic_cleanup",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "panic_abort",
                    ],
                    name: "__rust_start_panic",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "core",
                        "num",
                        "dec2flt",
                        "decimal_seq",
                        "DecimalSeq",
                    ],
                    name: "left_shift",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "core",
                        "num",
                        "dec2flt",
                        "decimal_seq",
                        "DecimalSeq",
                    ],
                    name: "right_shift",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
                NameId {
                    path: [
                        "compiler_builtins",
                        "int",
                        "udiv",
                        "__udivti3",
                    ],
                    name: "__udivti3",
                }: DebugFile {
                    [salsa id]: Id(800),
                    file: File {
                        [salsa id]: Id(0),
                        path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                        member_file: None,
                        mtime: SystemTime {
                            tv_sec: 1748701990,
                            tv_nsec: 341906278,
                        },
                        size: 3829072,
                    },
                    relocatable: false,
                },
            },
            source_to_file: {},
            base_address: {
                NameId {
                    path: [
                        "panic_abort",
                        "__rust_start_panic",
                    ],
                    name: "abort",
                }: 23296,
                NameId {
                    path: [
                        "simple_test",
                    ],
                    name: "function_call",
                }: 25812,
                NameId {
                    path: [
                        "simple_test",
                    ],
                    name: "main",
                }: 26124,
            },
            address_info: AddressTree {
                root: Some(
                    Node {
                        info: FunctionAddressInfo {
                            start: 25812,
                            end: 26124,
                            file: DebugFile {
                                [salsa id]: Id(800),
                                file: File {
                                    [salsa id]: Id(0),
                                    path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                                    member_file: None,
                                    mtime: SystemTime {
                                        tv_sec: 1748701990,
                                        tv_nsec: 341906278,
                                    },
                                    size: 3829072,
                                },
                                relocatable: false,
                            },
                            name: NameId {
                                path: [
                                    "simple_test",
                                ],
                                name: "function_call",
                            },
                        },
                        max_end_in_subtree: 26188,
                        left: Some(
                            Node {
                                info: FunctionAddressInfo {
                                    start: 23296,
                                    end: 23308,
                                    file: DebugFile {
                                        [salsa id]: Id(800),
                                        file: File {
                                            [salsa id]: Id(0),
                                            path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                                            member_file: None,
                                            mtime: SystemTime {
                                                tv_sec: 1748701990,
                                                tv_nsec: 341906278,
                                            },
                                            size: 3829072,
                                        },
                                        relocatable: false,
                                    },
                                    name: NameId {
                                        path: [
                                            "panic_abort",
                                            "__rust_start_panic",
                                        ],
                                        name: "abort",
                                    },
                                },
                                max_end_in_subtree: 23308,
                                left: None,
                                right: None,
                            },
                        ),
                        right: Some(
                            Node {
                                info: FunctionAddressInfo {
                                    start: 26124,
                                    end: 26188,
                                    file: DebugFile {
                                        [salsa id]: Id(800),
                                        file: File {
                                            [salsa id]: Id(0),
                                            path: "/Users/sam/work/tardis/target/aarch64-unknown-linux-gnu/debug-test/simple-test",
                                            member_file: None,
                                            mtime: SystemTime {
                                                tv_sec: 1748701990,
                                                tv_nsec: 341906278,
                                            },
                                            size: 3829072,
                                        },
                                        relocatable: false,
                                    },
                                    name: NameId {
                                        path: [
                                            "simple_test",
                                        ],
                                        name: "main",
                                    },
                                },
                                max_end_in_subtree: 26188,
                                left: None,
                                right: None,
                            },
                        ),
                    },
                ),
            },
        },
    },
}
