tests/snapshots/resolve_function@aarch64-unknown-linux-gnu.snap
---
source: tests/mod.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "main",
        address: "0x64d0",
        params: [],
    },
)
