tests/snapshots/resolve_function@x86_64-apple-darwin.snap
---
source: tests/mod.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "main",
        address: "0x100000b08",
        params: [],
    },
)
