tests/snapshots/resolve_function@x86_64-unknown-linux-gnu-2.snap
---
source: tests/mod.rs
expression: "resolver.resolve_function(\"function_call\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "function_call",
        address: "0xf7cf",
        params: [
            Variable {
                name: "x",
                value: None,
                ty: Some(
                    Type {
                        name: "u64",
                    },
                ),
            },
        ],
    },
)
