tests/snapshots/resolve_function@x86_64-unknown-linux-gnu.snap
---
source: tests/mod.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "main",
        address: "0x7ab8",
        params: [],
    },
)
